HttpUtils fix